修复首页，添加工具页面，更新实际的视频和照片。下一步实现点击effects和具体工具进入页面进行文件上传和生成下载

--- a/src/config/locale/messages/en/landing.json
+++ b/src/config/locale/messages/en/landing.json
@@ -14,11 +14,6 @@
     "nav": {
       "items": [
         {
-          "title": "Features",
-          "url": "/#features",
-          "icon": "Sparkles"
-        },
-        {
           "title": "Tools",
           "icon": "RiAppsLine",
           "children": [
@@ -47,6 +42,21 @@
               "icon": "RiApps2Line"
              }
           ]
+        },
+        {
+          "title": "Video Effects",
+          "url": "/video-effects",
+          "icon": "Video"
+        },
+        {
+          "title": "Photo Effects",
+          "url": "/photo-effects",
+          "icon": "Image"
+        },
+        {
+          "title": "API",
+          "url": "/api-platform",
+          "icon": "Code"
         },
         {
           "title": "Pricing",
@@ -144,8 +154,13 @@
           "title": "Company",
           "children": [
             {
-              "title": "About",
-              "url": "/about",
+              "title": "About Us",
+              "url": "/about-us",
+              "target": "_self"
+            },
+            {
+              "title": "API Platform",
+              "url": "/api-platform",
               "target": "_self"
             },
              {
