--- a/src/config/locale/messages/en/pages/index.json
+++ b/src/config/locale/messages/en/pages/index.json
@@ -2,7 +2,6 @@
   "page": {
     "show_sections": [
       "hero",
-      "logos",
       "introduce",
       "features",
       "effects",
@@ -13,9 +12,9 @@
     "sections": {
       "hero": {
         "id": "hero",
-        "title": "Your One-Stop AI Image & Video Creation Platform",
-        "highlight_text": "Creation Platform",
-        "description": "",
+        "title": "One Photo, Infinite Possibilities",
+        "highlight_text": "Infinite Possibilities",
+        "description": "Unlock your creativity with 1PhotoAI. Tap into our flagship models and all top-tier models in the industry.",
         "announcement": {
           "badge": "New",
           "title": "🎉 Enjoy Limited-Time 50% OFF!",
@@ -26,7 +25,7 @@
         "tools": [
           { "id": "video", "icon": "RiVideoLine", "label": "AI Video" },
           { "id": "text-to-video", "icon": "RiFileTextLine", "label": "Text/Image to Video" },
-          { "id": "pollo-2", "icon": "RiFlashlightLine", "label": "Pollo 2.0" }
+          { "id": "pollo-2", "icon": "RiFlashlightLine", "label": "Pollo 2.5" }
         ],
         "examples": [
            { "emoji": "👑", "text": "Crowning" },
@@ -79,33 +78,33 @@
       "introduce": {
         "block": "models-section",
         "id": "models-showcase",
-        "title": "ALL the Great AI Video & Image Models in ONE Place!",
-        "description": "With Pollo AI, you can tap into our flagship models and all top-tier models in the industry.",
+        "title": "Generate AI Photos in 10 Seconds",
+        "description": "1PhotoAI is an AI photos generator, delivering professional high-quality headshots in just 10 seconds. From enhancing your professional network profile to generating unique social media avatars or anime images.",
         "input_placeholder": "Enter your idea to generate",
         "items": [
           {
             "id": "video-generators",
             "title": "AI Video Generators",
-            "description": "With Pollo AI video generator, you can tap into our flagship Pollo 2.5 video model and all top-tier video models in the industry, including:",
+            "description": "With 1PhotoAI video generator, you can tap into our flagship Pollo 2.5 video model and all top-tier video models in the industry, including:",
             "icon": "RiVideoLine",
             "tags": [
-               "Pollo 2.5", "Veo 3", "Sora 2", "Kling AI", "Hailuo AI", "PixVerse AI", "Runway", "Vidu AI", "Luma AI", "Pika AI", "Seedance", "Wan AI", "Hunyuan"
+               "Pollo 2.5", "Kling AI", "Veo 3", "Sora 2", "Runway", "Vidu AI"
             ],
             "button": {
                 "title": "AI Video Generator",
                 "url": "/video-generator"
             },
             "logos": [
-                "/imgs/logos/pollo.svg", "/imgs/logos/kling.svg", "/imgs/logos/veo.svg", "/imgs/logos/sora.svg"
+                "/imgs/logos/pollo.svg", "/imgs/logos/kling.svg", "/imgs/logos/veo.svg", "/imgs/logos/sora.svg", "/imgs/logos/runway.svg"
             ]
           },
           {
             "id": "image-generators",
             "title": "AI Image Generators",
-            "description": "Pollo AI image generator features our cutting-edge Image 2.0 model, alongside other leading image models available today, including:",
+            "description": "1PhotoAI image generator features our cutting-edge Image 2.0 model, alongside other leading image models available today, including:",
             "icon": "RiImageLine",
              "tags": [
-               "Nano Banana", "Midjourney", "Recraft", "Ideogram", "Stable Diffusion", "Flux AI", "Seedream", "Dall-E", "Imagen", "GPT-4o", "Flux Kontext", "Qwen Image", "Wan AI"
+               "Nano Banana", "Midjourney", "Flux AI", "Stable Diffusion", "Dall-E"
             ],
             "button": {
                 "title": "AI Image Generator",
@@ -121,7 +120,7 @@
       "features": {
         "block": "feature-split",
         "id": "features",
-        "title": "Why Choose 1photoai",
+        "title": "Why Choose 1PhotoAI",
         "items": [
           {
             "title": "Image Creation & Art Generation",
@@ -175,28 +174,101 @@
             "label": "Video Effects",
             "items": [
               {
-                "title": "AI Kissing Video Generator",
-                "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_2.png", "alt": "AI Kissing" },
+                "title": "AI Kissing Video",
+                "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_1.png", "alt": "AI Kissing" },
+                "video": "/videos/AI_Kissing.mp4",
                 "badge": "HOT",
                 "count": "3M"
               },
               {
                 "title": "AI Muscle Generator",
-                "image": { "src": "/imgs/cms/Muscle_肌肉展示_2.png", "alt": "AI Muscle" },
+                "image": { "src": "/imgs/cms/Muscle_肌肉展示_1.png", "alt": "AI Muscle" },
+                "video": "/videos/肌肉展示.mp4",
                 "badge": "HOT",
                 "count": "149.4K"
               },
               {
-                "title": "AI Bikini",
-                "image": { "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_1.png", "alt": "AI Bikini" },
+                "title": "AI Belly Dance",
+                "image": { "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_1.png", "alt": "AI Dance" },
+                "video": "/videos/肚皮舞.mp4",
                 "badge": "HOT",
                 "count": "127.1K"
               },
               {
-                "title": "AI Jiggle Video Effect",
-                "image": { "src": "/imgs/cms/Jiggle_抖动身体_2.png", "alt": "AI Jiggle" },
+                "title": "AI Body Jiggle",
+                "image": { "src": "/imgs/cms/Jiggle_抖动身体_1.png", "alt": "AI Jiggle" },
+                "video": "/videos/抖动身体.mp4",
                 "badge": "HOT",
                 "count": "73.9K"
+              },
+              {
+                "title": "AI Twerk Dance",
+                "image": { "src": "/imgs/cms/Twerk_扭臀舞_1.png", "alt": "AI Twerk" },
+                "video": "/videos/扭臀舞.mp4",
+                "badge": "NEW",
+                "count": "50K"
+              },
+              {
+                "title": "AI Electric Shake",
+                "image": { "src": "/imgs/cms/Twerk_电摇舞_1.png", "alt": "AI Electric Shake" },
+                "video": "/videos/电摇舞.mp4",
+                "count": "45K"
+              },
+              {
+                "title": "AI normal Kiss",
+                "image": { "src": "/imgs/cms/AI-Kissing_正常接吻_2.png", "alt": "AI Kiss" },
+                "video": "/videos/正常接吻.mp4",
+                "count": "40K"
+              },
+              {
+                "title": "India AI Kissing",
+                "image": { "src": "/imgs/cms/AI-Fake-Date_印度女友_1.png", "alt": "India Kiss" },
+                "video": "/videos/AI_Kissing_印度女友.mp4",
+                "count": "35K"
+              },
+              {
+                "title": "Russian AI Kissing",
+                "image": { "src": "/imgs/cms/AI-Fake-Date_俄罗斯女友_1.png", "alt": "Russian Kiss" },
+                "video": "/videos/俄罗斯女友.mp4",
+                "badge": "HOT",
+                "count": "1.2M"
+              },
+              {
+                "title": "Street Dance",
+                "image": { "src": "/imgs/cms/AI-Dance-Generator_肚皮舞_2.png", "alt": "Street Dance" },
+                "video": "/videos/街舞.mp4",
+                "count": "25K"
+              },
+              {
+                "title": "Jurassic Adventure",
+                "image": { "src": "/imgs/cms/AI-Fake-Date_女友约会_1.png", "alt": "Jurassic" },
+                "video": "/videos/侏罗纪奇遇.mp4",
+                "count": "15K"
+              },
+              {
+                "title": "Moon Walk",
+                "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_2.png", "alt": "Moon Walk" },
+                "video": "/videos/登月漫步.mp4",
+                "count": "90K"
+              },
+              {
+                "title": "New Year Scene",
+                "image": { "src": "/imgs/cms/AI-Fake-Date_中国女友_1.png", "alt": "New Year" },
+                "video": "/videos/过年场景.mp4",
+                "count": "66K"
+              },
+              {
+                "title": "Enter Mouth",
+                "image": { "src": "/imgs/cms/Pregnant-AI_进入嘴巴_1.png", "alt": "Enter Mouth" },
+                "video": "/videos/进入嘴巴.mp4",
+                "badge": "HOT",
+                "count": "110K"
+              },
+              {
+                "title": "360 Rotation",
+                "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_1.png", "alt": "360 Rotation" },
+                "video": "/videos/AI_360_Rotation.mp4",
+                "count": "33K"
               }
             ]
           },
@@ -206,27 +278,98 @@
             "items": [
               {
                 "title": "AI Fake Date",
-                "image": { "src": "/imgs/cms/AI-Fake-Date_美国女友_1.png", "alt": "AI Fake Date" },
+                "beforeImage": { "src": "/imgs/cms/AI-Fake-Date_美国女友_1.png", "alt": "Before AI Fake Date" },
+                "image": { "src": "/imgs/cms/AI-Fake-Date_美国女友_2.png", "alt": "AI Fake Date" },
                 "badge": "NEW",
                 "count": "50K"
               },
               {
-                "title": "Hug Generator",
-                "image": { "src": "/imgs/cms/Hug_拥抱_1.png", "alt": "Hug Generator" },
+                "title": "AI Hug",
+                "beforeImage": { "src": "/imgs/cms/Hug_拥抱_1.png", "alt": "Before Hug" },
+                "image": { "src": "/imgs/cms/Hug_拥抱_2.png", "alt": "Hug" },
                 "badge": "HOT",
                 "count": "200K"
               },
               {
                 "title": "Pregnant AI",
-                "image": { "src": "/imgs/cms/Pregnant-AI_怀孕_1.png", "alt": "Pregnant AI" },
+                "beforeImage": { "src": "/imgs/cms/Pregnant-AI_怀孕_1.png", "alt": "Before Pregnant" },
+                "image": { "src": "/imgs/cms/Pregnant-AI_怀孕_2.png", "alt": "Pregnant AI" },
                 "badge": "HOT",
                 "count": "90K"
               },
               {
-                "title": "Character 360",
-                "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_1.png", "alt": "Character 360" },
-                "badge": "NEW",
+                "title": "French Kiss",
+                "beforeImage": { "src": "/imgs/cms/AI-Kissing_法式接吻_1.png", "alt": "Before French Kiss" },
+                "image": { "src": "/imgs/cms/AI-Kissing_法式接吻_2.png", "alt": "French Kiss" },
+                "badge": "HOT",
+                "count": "1.5M"
+              },
+              {
+                "title": "Forehead Kiss",
+                "beforeImage": { "src": "/imgs/cms/AI-Kissing_额头之吻_1.png", "alt": "Before Forehead Kiss" },
+                "image": { "src": "/imgs/cms/AI-Kissing_额头之吻_2.png", "alt": "Forehead Kiss" },
+                "count": "45K"
+              },
+              {
+                "title": "Lip Biting Kiss",
+                "beforeImage": { "src": "/imgs/cms/AI-Kissing_咬嘴唇之吻_1.png", "alt": "Before Lip Biting" },
+                "image": { "src": "/imgs/cms/AI-Kissing_咬嘴唇之吻_2.png", "alt": "Lip Biting" },
+                "count": "120K"
+              },
+              {
+                "title": "Celebrity Selfie",
+                "beforeImage": { "src": "/imgs/cms/AI-Selfie-with-Celebrities_名人合拍_1.png", "alt": "Before Selfie" },
+                "image": { "src": "/imgs/cms/AI-Selfie-with-Celebrities_名人合拍_2.png", "alt": "Selfie" },
+                "badge": "HOT",
+                "count": "2.1M"
+              },
+              {
+                "title": "Princess Hug",
+                "beforeImage": { "src": "/imgs/cms/Hug_公主抱_1.png", "alt": "Before Princess Hug" },
+                "image": { "src": "/imgs/cms/Hug_公主抱_2.png", "alt": "Princess Hug" },
+                "count": "75K"
+              },
+              {
+                "title": "Back Hug",
+                "beforeImage": { "src": "/imgs/cms/Hug_背后环抱_1.png", "alt": "Before Back Hug" },
+                "image": { "src": "/imgs/cms/Hug_背后环抱_2.png", "alt": "Back Hug" },
+                "count": "88K"
+              },
+              {
+                "title": "Lift Hug",
+                "beforeImage": { "src": "/imgs/cms/Hug_托举式抱_1.png", "alt": "Before Lift Hug" },
+                "image": { "src": "/imgs/cms/Hug_托举式抱_2.png", "alt": "Lift Hug" },
+                "count": "54K"
+              },
+              {
+                "title": "Japanese Girlfriend",
+                "beforeImage": { "src": "/imgs/cms/AI-Fake-Date_日本女友_1.png", "alt": "Before Japanese GF" },
+                "image": { "src": "/imgs/cms/AI-Fake-Date_日本女友_2.png", "alt": "Japanese GF" },
+                "count": "130K"
+              },
+              {
+                "title": "French Girlfriend",
+                "beforeImage": { "src": "/imgs/cms/AI-Fake-Date_法国女友_1.png", "alt": "Before French GF" },
+                "image": { "src": "/imgs/cms/AI-Fake-Date_法国女友_2.png", "alt": "French GF" },
+                "count": "95K"
+              },
+              {
+                "title": "Chinese Girlfriend",
+                "beforeImage": { "src": "/imgs/cms/AI-Fake-Date_中国女友_1.png", "alt": "Before Chinese GF" },
+                "image": { "src": "/imgs/cms/AI-Fake-Date_中国女友_2.png", "alt": "Chinese GF" },
+                "count": "210K"
+              },
+              {
+                "title": "360 Muscle",
+                "beforeImage": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_1.png", "alt": "Before 360 Muscle" },
+                "image": { "src": "/imgs/cms/AI-360-Rotation_肌肉展示_2.png", "alt": "360 Muscle" },
                 "count": "15K"
+              },
+              {
+                "title": "Cheek Kiss",
+                "beforeImage": { "src": "/imgs/cms/AI-Kissing_脸颊之吻_1.png", "alt": "Before Cheek Kiss" },
+                "image": { "src": "/imgs/cms/AI-Kissing_脸颊之吻_2.png", "alt": "Cheek Kiss" },
+                "count": "42K"
               }
             ]
           }
@@ -236,7 +379,7 @@
       "creations": {
         "block": "creations-section",
         "id": "creations",
-        "title": "Explore Pollo AI's User Creations",
+        "title": "Explore 1PhotoAI's User Creations",
         "tabs": [
             { "id": "all", "label": "All" },
             { "id": "videos", "label": "Videos" },
